--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Science fiction, American'
+- GITenberg
 title: Millennium
 url: http://www.gutenberg.org/ebooks/24779
